# MD_lab

./: CMakeLists.txt  README.md
src/: Atom.cpp  Atom.h  Boundary.cpp  Boundary.h  CubicBox.cpp  CubicBox.h  ForceField.cpp  ForceField.h  InputParser.cpp  InputParser.h  Reader.cpp  Reader.h  Simulation.cpp  Simulation.h  Thermostat.cpp  Thermostat.h  main.cpp  vec3.cpp  vec3.h
src/data/: lj_params
utils/: grid_gen.py  input_gen.py
